--- a/CityInfoApi/Properties/launchSettings.json
+++ b/CityInfoApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "CityInfoApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7105;http://localhost:5153",
       "environmentVariables": {
