--- a/CityInfoApi/appsettings.Development.json
+++ b/CityInfoApi/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "CityInfo.API.Controllers": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CityInfoDbContextConnection": "Data Source=CityInfo.db"
   }
 }
