--- a/CityInfoApi/CityInfoApi.csproj
+++ b/CityInfoApi/CityInfoApi.csproj
@@ -9,6 +9,15 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.24" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.24" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.24" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.24">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.24" />
+        <PackageReference Include="Serilog.AspNetCore" Version="7.0.1-dev-00320" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0-dev-00923" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00968" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
