--- a/CityInfoApi/CityInfoApi.csproj
+++ b/CityInfoApi/CityInfoApi.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.24" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.24" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.24" />
