Add auth controller

--- a/CityInfoApi/appsettings.Development.json
+++ b/CityInfoApi/appsettings.Development.json
@@ -9,5 +9,10 @@
   },
   "ConnectionStrings": {
     "CityInfoDbContextConnection": "Data Source=CityInfo.db"
+  },
+  "Authentication": {
+    "SecretForKey": "MySecretKeyForCityInfoApp1234567891234567890",
+    "Issuer": "https://localhost:7105",
+    "Audience": "CityInfoAudience"
   }
 }
