--- a/CityInfoApi/CityInfoApi.csproj
+++ b/CityInfoApi/CityInfoApi.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.24" />
         <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.24" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.24" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.24" />
@@ -16,10 +17,12 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.24" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.33.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.1-dev-00320" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0-dev-00923" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00968" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
     </ItemGroup>
 
 </Project>
